添加同步sso人员及门店、修改预警消息页面

--- a/WebContent/bizbase/message.html
+++ b/WebContent/bizbase/message.html
@@ -20,8 +20,9 @@
   </style>
 </head>
 <body>
-	
 	<h1 style="text-align: center;color: red;">品类库存消息预警<br /><label id="title"></label></h1>
+	
+	<h4 style="margin-left: 10px;"><strong><font color='red'>*</font>基于过去90天的产品销售和当前库存，作出以下库存预警。</strong></h4>
 	<hr>
 	<h3 id="content"></h3> 
 
