--- a/WebContent/bizbase/messagedz.html
+++ b/WebContent/bizbase/messagedz.html
@@ -20,8 +20,9 @@
   </style>
 </head>
 <body>
-	
 	<h1 style="text-align: center;color: red;">门店选品推荐<br /><label id="title"></label></h1>
+	
+	<h4 style="margin-left: 10px;"><strong><font color='red'>*</font>基于过去90天的产品销售和当前库存，作出以下选品建议。</strong></h4>
 	<hr>
 	<h3 id="content"></h3> 
 
