提交大屏社员邀请人数排名和毛利，商品排名

--- a/WebContent/crm/dynamicData_profit_analysis.html
+++ b/WebContent/crm/dynamicData_profit_analysis.html
@@ -731,8 +731,8 @@
             }
             var city_id = null;
             if(target==0){//总部
-                city_id = ($("#city_id_tradetype").val())==""?null:($("#city_id_tradetype").val());
-                var city_name =  $("#city_name_tradetype").val();
+                city_id = ($("#city_id_tradetype2").val())==""?null:($("#city_id_tradetype2").val());
+                var city_name =  $("#city_name_tradetype2").val();
                 if(city_id==null&&city_name!=""){
                     city_id=-10000;
                 }
