--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -576,16 +576,120 @@
         </div>
 		</div>
 		<div class="swiper-slide">
+		<div class="clearfix"><div class="pull-right" id="fullScreenSwiper"><img src="dist/img/fullscreen.png"> </div></div>
               <div id="main13" style="width: 100%;height:600px;"></div>
         </div>
+		<div class="swiper-slide">
+              <div class="nav-tabs-custom">
+                <ul class="nav nav-tabs pull-right">
+                  <li><a href="#tab_1-1" data-toggle="tab">近30日</a></li>
+                  <li><a href="#tab_1-2" data-toggle="tab">近7日</a></li>
+                  <li class="active"><a href="#tab_1-3" data-toggle="tab">昨日</a></li>
+                </ul>
+                <div class="tab-content">
+                  <div class="tab-pane" id="tab_1-1">
+                    <div class="col-sm-6" style="padding: 0 10px 0 15px">
+                    <h4 class="text-center" style="color: #ff0; font-size: 18px; font-family: Microsoft YaHei; padding-bottom: 5px">毛利排行榜</h4>
+                      <table cellpadding="0" cellspacing="0" border="0" class="text-center">
+                        <tbody id="profit_store_1">
+                        </tbody>
+                      </table>
+                    </div>
+                    <div class="col-sm-6" style="padding: 0 10px 0 15px">
+                    <h4 class="text-center" style="color: #ff0; font-size: 18px; font-family: Microsoft YaHei; padding-bottom: 5px">社员开卡数排行榜</h4>
+                      <table cellpadding="0" cellspacing="0" border="0" class="text-center">
+                        <tbody id="member_2">
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                  <!-- /.tab-pane -->
+                  <div class="tab-pane" id="tab_1-2">
+                    <div class="col-sm-6" style="padding: 0 10px 0 15px">
+                    <h4 class="text-center" style="color: #ff0; font-size: 18px; font-family: Microsoft YaHei; padding-bottom: 5px">毛利排行榜</h4>
+                      <table cellpadding="0" cellspacing="0" border="0" class="text-center">
+                        <tbody id="profit_store_3">
+                        </tbody>
+                      </table>
+                    </div>
+                    <div class="col-sm-6" style="padding: 0 10px 0 15px">
+                    <h4 class="text-center" style="color: #ff0; font-size: 18px; font-family: Microsoft YaHei; padding-bottom: 5px">社员开卡数排行榜</h4>
+                      <table cellpadding="0" cellspacing="0" border="0" class="text-center">
+                        <tbody id="member_4">
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                  <!-- /.tab-pane -->
+                  <div class="tab-pane active" id="tab_1-3">
+                    <div class="col-sm-6" style="padding: 0 10px 0 15px">
+                    <h4 class="text-center" style="color: #ff0; font-size: 18px; font-family: Microsoft YaHei; padding-bottom: 5px">毛利排行榜</h4>
+                      <table cellpadding="0" cellspacing="0" border="0" class="text-center">
+                        <tbody id="profit_store_5">
+                        </tbody>
+                      </table>
+                    </div>
+                    <div class="col-sm-6" style="padding: 0 10px 0 15px">
+                    <h4 class="text-center" style="color: #ff0; font-size: 18px; font-family: Microsoft YaHei; padding-bottom: 5px">社员开卡数排行榜</h4>
+                      <table cellpadding="0" cellspacing="0" border="0" class="text-center">
+                        <tbody id="member_6">
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                  <!-- /.tab-pane -->
+                </div>
+              </div>
+            </div>
+        <div class="swiper-slide">
+              <div class="nav-tabs-custom">
+                <ul class="nav nav-tabs pull-right">
+                  <li><a href="#tab_2-1" data-toggle="tab">近30日</a></li>
+                  <li><a href="#tab_2-2" data-toggle="tab">近7日</a></li>
+                  <li class="active"><a href="#tab_2-3" data-toggle="tab">昨日</a></li>
+                </ul>
+                <div class="tab-content">
+                  <div class="tab-pane" id="tab_2-1">
+                    <div style="margin: 0 15px">
+                      <h4 class="text-center" style="color: #ff0; font-size: 18px; font-family: Microsoft YaHei; padding-bottom: 5px">商品排行榜</h4>
+                      <table cellpadding="0" cellspacing="0" border="0" class="text-center">
+                        <tbody id="product_1">
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                  <div class="tab-pane" id="tab_2-2">
+                    <div style="margin: 0 15px">
+                      <h4 class="text-center" style="color: #ff0; font-size: 18px; font-family: Microsoft YaHei; padding-bottom: 5px">商品排行榜</h4>
+                      <table cellpadding="0" cellspacing="0" border="0" class="text-center">
+                      <tbody id="product_2">
+                      </tbody>
+                    </table>
+                    </div>
+                  </div>
+                  <div class="tab-pane active" id="tab_2-3">
+                    <div style="margin: 0 15px">
+                      <h4 class="text-center" style="color: #ff0; font-size: 18px; font-family: Microsoft YaHei; padding-bottom: 5px">商品排行榜</h4>
+                      <table cellpadding="0" cellspacing="0" border="0" class="text-center">
+                      <tbody id="product_3">
+                      </tbody>
+                    </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
 		</div>
+
+ 
+		
 		 <!-- Add Pagination -->
 		 <div class="swiper-pagination"></div>
 		 <!-- Add Arrows -->
 		 <div class="swiper-button-next swiper-button-white"></div>
 		 <div class="swiper-button-prev swiper-button-white"></div>
+		 </div>
       </div>
-	  </div>
       <div class="col-sm-3 no-padding">
         <div id="main2" style="width: 100%;height:300px;"></div>
         <div id="main11" style="width: 100%;height:300px;"></div>
