修改提示信息

--- a/WebContent/crm/dynamicData_gax_analysis.html
+++ b/WebContent/crm/dynamicData_gax_analysis.html
@@ -137,7 +137,7 @@
                     <div class="box-header h4 text-light-blue">
                         <div class="pull-left "><strong>国安侠毛利</strong></div>
                         <div class="pull-left text-red" style="padding-left:15px;font-size:75%">数据口径：</div>
-                        <div class="pull-left text-red" style="font-size:75%">1.销售收入=片区销售收入+手动匹配营销收入+人均匹配营销收入</br>2.片区销售收入：当月所有指定国安侠的有效订单收入（去除退货）</br>3.手动匹配营销收入：当月所有手动分配的有效订单收入（去除退货）</br>4.人均匹配营销收入：当月门店内现场扫码类订单收入均值</br>5.片区营销费用：指定国安侠类订单内平台分摊使用的优惠券</br>6.手动匹配营销费用：手动匹配类订单内平台分摊使用的优惠券</br>7.整体毛利=片区销售收入+手动分配销售收入+人均分配销售收入-片区营销费用-手动分配营销费用-报损盘亏。</br>8.国安侠毛利=整体毛利+补贴</div>
+                        <div class="pull-left text-red" style="font-size:75%">1.销售收入=片区销售收入+手动匹配营销收入+人均匹配营销收入</br>2.片区销售收入：当月所有指定国安侠的有效订单收入（去除退货）</br>3.手动匹配营销收入：当月所有手动分配的有效订单收入（去除退货）</br>4.人均匹配营销收入：当月门店内现场扫码类订单收入均值</br>5.片区营销费用：指定国安侠类订单内平台分摊使用的优惠券</br>6.手动匹配营销费用：手动匹配类订单内平台分摊使用的优惠券</br>7.整体毛利=片区销售收入+手动分配销售收入+人均分配销售收入-片区营销费用-手动分配营销费用-报损盘亏。</br>8.国安侠毛利=整体毛利+优易补贴</div>
                     </div>
                     <div class="box-body">
                         <div class="form-group col-lg-4">
