--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -79,7 +79,7 @@
   }
 
   .content2 {
-      width: 400px;
+      width: 450px;
       position: absolute;
       right: 10px;
       top: 70px;
@@ -99,7 +99,7 @@
   .content2 .div1{
       margin-top: 10px;
       max-height: 370px;
-      overflow: auto;
+      /*overflow: auto;*/
 
   }
   .content2 img{
@@ -114,7 +114,7 @@
       margin-right: 100px;
   }
   .content2 .divcontent {
-      width: 362px;
+      width: 420px;
       height: 60px;
       background: #fff;
       margin: 10px auto;
@@ -123,7 +123,7 @@
   }
 
   .content2 .downleft {
-      width: 59px;
+      width: 75px;
       height: 60px;
       float: left;
       text-align: center;
@@ -132,7 +132,7 @@
   }
 
   .content2 .downright {
-      width: 300px;
+      width: 450px;
       height: 60px;
       margin-left: 60px;
   }
@@ -147,8 +147,8 @@
   }
 
   .content2 .xlsx {
-      color: #1a73e8;
-      font-weight: bold;
+      /*color: #1a73e8;*/
+      /*font-weight: bold;*/
   }
 
   .content2 .downrighta {
