--- a/WebContent/crm/searchDataItem_view.html
+++ b/WebContent/crm/searchDataItem_view.html
@@ -214,7 +214,7 @@
     }
 
     .content2 {
-        width: 400px;
+        width: 450px;
         position: absolute;
         right: 10px;
         top: 70px;
@@ -248,7 +248,7 @@
         margin-right: 100px;
     }
     .content2 .divcontent {
-        width: 378px;
+        width: 420px;
         height: 60px;
         background: #fff;
         margin: 10px auto;
@@ -257,7 +257,7 @@
     }
 
     .content2 .downleft {
-        width: 59px;
+        width: 75px;
         height: 60px;
         float: left;
         text-align: center;
@@ -266,7 +266,7 @@
     }
 
     .content2 .downright {
-        width: 400px;
+        width: 450px;
         height: 60px;
         margin-left: 60px;
     }
@@ -1832,13 +1832,21 @@ function download_table(){
                         file_status = "已生成文件";
                     }
                     var file_times = dataresult[i].downTimes;
-
-
+                    var type = dataresult[i].description;
+                    if(type == "personal"){
+                        type = "人工导出";
+                    }else{
+                        type = "系统推送";
+                    }
                     var url = dataresult[i].url;
                     if(dataresult[i].mark1 == 0){
-                        html = html + "<dl class='divcontent'><dt class='downleft'><img src='dist/img/xlsx.png'/></dt><dd class='downright'><div style='padding-top: 10px;'><div class='downrightdiv'><span class='downrightspan'>文件名</span><span>：</span><span>"+ file_filename +"</span><span class='xlsx'>.csv</span></div><div class='downrightdiv'><span class='downrightspan'>状 &nbsp;&nbsp;态</span><span>：</span><span>" + file_status +"</span><a class='downrighta' style='color:gray;' disabled='true'>下载</a></div></div></dd> </dl>"
+                        html = html + "<dl class='divcontent'><dt class='downleft'><img src='dist/img/xlsx.png'/></dt><dt class='downleft'><span>"+ type +"</span></dt><dd class='downright'><div style='padding-top: 10px;margin-left: 86px;'><div class='downrightdiv'><span class='downrightspan'>文件名</span><span>：</span><span>"+ file_filename +"</span><span class='xlsx'>.csv</span></div><div class='downrightdiv'><span class='downrightspan'>状 &nbsp;&nbsp;态</span><span>：</span><span>" + file_status +"</span><a class='downrighta' style='color:gray;' disabled='true'>下载</a></div></div></dd> </dl>"
                     }else{
-                        html = html + "<dl class='divcontent'><dt class='downleft'><img src='dist/img/xlsx.png'/></dt><dd class='downright'><div style='padding-top: 10px;'><div class='downrightdiv'><span class='downrightspan'>文件名</span><span>：</span><span>"+ file_filename +"</span><span class='xlsx'>.csv</span></div><div class='downrightdiv'><span class='downrightspan'>状 &nbsp;&nbsp;态</span><span>：</span><span>" + file_status +"</span><a class='downrighta' href='"+ url+"'>下载</a></div></div></dd> </dl>"
+                        if(url == null || url == ""){
+                            html = html + "<dl class='divcontent'><dt class='downleft'><img src='dist/img/xlsx.png'/></dt><dt class='downleft'><span>"+ type +"</span></dt><dd class='downright'><div style='padding-top: 10px;;margin-left: 86px;'><div class='downrightdiv'><span class='downrightspan'>文件名</span><span>：</span><span>"+ file_filename +"</span><span class='xlsx'>.csv</span></div><div class='downrightdiv'><span class='downrightspan'>状 &nbsp;&nbsp;态</span><span>：</span><span>" + "生成文件失败" +"</span><a class='downrighta' style='color:gray;' disabled='true'>下载</a></div></div></dd> </dl>"
+                        }else{
+                            html = html + "<dl class='divcontent'><dt class='downleft'><img src='dist/img/xlsx.png'/></dt><dt class='downleft'><span>"+ type +"</span></dt><dd class='downright'><div style='padding-top: 10px;;margin-left: 86px;'><div class='downrightdiv'><span class='downrightspan'>文件名</span><span>：</span><span>"+ file_filename +"</span><span class='xlsx'>.csv</span></div><div class='downrightdiv'><span class='downrightspan'>状 &nbsp;&nbsp;态</span><span>：</span><span>" + file_status +"</span><a class='downrighta' href='"+ url+"'>下载</a></div></div></dd> </dl>"
+                        }
 
                     }
 
