--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -215,7 +215,7 @@
     }
 
     .content2 {
-        width: 400px;
+        width: 450px;
         position: absolute;
         right: 10px;
         top: 70px;
@@ -249,7 +249,7 @@
         margin-right: 100px;
     }
     .content2 .divcontent {
-        width: 378px;
+        width: 420px;
         height: 60px;
         background: #fff;
         margin: 10px auto;
@@ -258,7 +258,7 @@
     }
 
     .content2 .downleft {
-        width: 59px;
+        width: 75px;
         height: 60px;
         float: left;
         text-align: center;
@@ -267,7 +267,7 @@
     }
 
     .content2 .downright {
-        width: 400px;
+        width: 450px;
         height: 60px;
         margin-left: 60px;
     }
@@ -2319,20 +2319,30 @@ function download_table(){
 
                     var file_enfilename = dataresult[i].url;
                     var file_times = dataresult[i].downTimes;
-
+                    var type = dataresult[i].description;
 
 //                    var url = document.location + "";
 //                    var indexurl = url.indexOf("crm");
 //                    url = url.substr(0, indexurl);
 //                    var dateurl = getCurrent();
 //                    url = url + "out/artifacts/daqWeb_war_exploded/template"+ file_enfilename + ".csv";
+                    if(type == "personal"){
+                        type = "人工导出";
+                    }else{
+                        type = "系统推送";
+                    }
                     var url = dataresult[i].url;
                     if(dataresult[i].mark1 == 0){
 //                        html = html + "<tr><td class='downtr'>"+ file_filename +"</td><td class='downtr'> " + file_status +"</td><td class='downtr'><a class='downa' style='color:gray;' disabled='true'>下载</a></td></tr>";
-                        html = html + "<dl class='divcontent'><dt class='downleft'><img src='dist/img/xlsx.png'/></dt><dd class='downright'><div style='padding-top: 10px;'><div class='downrightdiv'><span class='downrightspan'>文件名</span><span>：</span><span>"+ file_filename +"</span><span class='xlsx'>.csv</span></div><div class='downrightdiv'><span class='downrightspan'>状 &nbsp;&nbsp;态</span><span>：</span><span>" + file_status +"</span><a class='downrighta' style='color:gray;' disabled='true'>下载</a></div></div></dd> </dl>"
+                        html = html + "<dl class='divcontent'><dt class='downleft'><img src='dist/img/xlsx.png'/> </dt><dt class='downleft'><span>"+ type +"</span></dt><dd class='downright'><div style='padding-top: 10px;margin-left: 86px;'><div class='downrightdiv'><span class='downrightspan'>文件名</span><span>：</span><span>"+ file_filename +"</span><span class='xlsx'>.csv</span></div><div class='downrightdiv'><span class='downrightspan'>状 &nbsp;&nbsp;态</span><span>：</span><span>" + file_status +"</span><a class='downrighta' style='color:gray;' disabled='true'>下载</a></div></div></dd> </dl>"
                     }else{
+                        if(url == null || url == ""){
+                            html = html + "<dl class='divcontent'><dt class='downleft'><img src='dist/img/xlsx.png'/></dt><dt class='downleft'><span>"+ type +"</span></dt><dd class='downright'><div style='padding-top: 10px;margin-left: 86px;'><div class='downrightdiv'><span class='downrightspan'>文件名</span><span>：</span><span>"+ file_filename +"</span><span class='xlsx'>.csv</span></div><div class='downrightdiv'><span class='downrightspan'>状 &nbsp;&nbsp;态</span><span>：</span><span>"+ "生成文件失败" +"</span><a class='downrighta' style='color:gray;' disabled='true'>下载</a></div></div></dd> </dl>"
+
+                        }else{
+                            html = html + "<dl class='divcontent'><dt class='downleft'><img src='dist/img/xlsx.png'/></dt><dt class='downleft'><span>"+ type +"</span></dt><dd class='downright'><div style='padding-top: 10px;margin-left: 86px;'><div class='downrightdiv'><span class='downrightspan'>文件名</span><span>：</span><span>"+ file_filename +"</span><span class='xlsx'>.csv</span></div><div class='downrightdiv'><span class='downrightspan'>状 &nbsp;&nbsp;态</span><span>：</span><span>" + file_status +"</span><a class='downrighta' href='"+ url+"'>下载</a></div></div></dd> </dl>"
+                        }
 //                        html = html + "<tr><td class='downtr'>"+ file_filename +"</td><td class='downtr'> " + file_status +"</td><td class='downtr'><a class='downa' href='"+ url+"' onclick='addTimes("+file_id+","+file_times+")'>下载</a></td></tr>";
-                        html = html + "<dl class='divcontent'><dt class='downleft'><img src='dist/img/xlsx.png'/></dt><dd class='downright'><div style='padding-top: 10px;'><div class='downrightdiv'><span class='downrightspan'>文件名</span><span>：</span><span>"+ file_filename +"</span><span class='xlsx'>.csv</span></div><div class='downrightdiv'><span class='downrightspan'>状 &nbsp;&nbsp;态</span><span>：</span><span>" + file_status +"</span><a class='downrighta' href='"+ url+"'>下载</a></div></div></dd> </dl>"
 
                     }
 
